# tap-edgar

./: .gitignore  README.md  meltano.yml  pyproject.toml  setup.cfg  test_config.json
.meltano/: analytics.json  meltano.db
.meltano/run/: bin
config/: sp500.config.json  us_banks.config.json
script/: test
tap_edgar/: tap.py
tap_edgar/streams/: edgar_10k_stream.py  tap_edgar_stream.py
tap_edgarx/streams/: tap_edgar_stream.py
tests/: __init__.py  conftest.py  test_core.py
