[tool.poetry]
name = "tap-edgar"
version = "0.1.0"
description = ""
authors = ["Minor Gordon <minorg@server.fake>"]
readme = "README.md"
packages = [{include = "tap_edgar"}]

[tool.poetry.dependencies]
python = "~3.11"
meltano = "^2.20.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
